[tool.poetry]
name = "pbt-add"
version = "0.1.0"
description = "Property-based testing for simple addition"
authors = ["Igor Konnov <igor@konnov.phd>"]
readme = "README.md"
packages = [{include = "pbt_add", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.92.0"
hypothesis-crosshair = "^0.0.8"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*AVAILABLE_PROVIDERS.*:DeprecationWarning",
]
